Fixed broken switch component with style "text-align: center" applied on themes.

--- a/themes/theme-modules/ios7/components/topcoat-switch.styl
+++ b/themes/theme-modules/ios7/components/topcoat-switch.styl
@@ -30,6 +30,7 @@
   height var-height--switch
   border-radius var-switch--border-radius
   z-index 1
+  text-align left
 
 .topcoat-switch__input
   @extend .switch__input
